Add divs to index.html and modify style.css

--- a/index.html
+++ b/index.html
@@ -8,15 +8,21 @@
     </head>
 
     <body>
-        <h1>Welcome to my website</h1>
-        <p>Lavan Bahirathan</p>
-        <h2>About me</h2>
-        <p>About me text</p>
-        <h2>Goals and aspirations</h2>
-        <p>Goals and aspirations text</p>
-        <h2>Achievements</h2>
-        <p>Achievements text</p>
-        <h2>Contact information</h2>
-        <p>Contact information text</p>
+        <div class="container">
+            <div class="welcome">
+                <h1>Welcome to my website</h1>
+            </div>
+            <div class="name">
+                <p>Lavan Bahirathan</p>
+            </div>
+            <h2>About me</h2>
+            <p>About me text</p>
+            <h2>Goals and aspirations</h2>
+            <p>Goals and aspirations text</p>
+            <h2>Achievements</h2>
+            <p>Achievements text</p>
+            <h2>Contact information</h2>
+            <p>Contact information text</p>
+        </div>
     </body>
 </html>
