--- a/index.html
+++ b/index.html
@@ -20,7 +20,11 @@
             <h2>Goals and aspirations</h2>
             <p>Goals and aspirations text</p>
             <h2>Achievements</h2>
-            <p>Achievements text</p>
+            <ul>
+                <li>Achievement 1</li>
+                <li>Achievement 2</li>
+                <li>Achievement 3</li>
+            </ul>
             <h2>Contact information</h2>
             <p>Contact information text</p>
         </div>
