--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
             </div>
             <h2>About me</h2>
             <p>About me text</p>
+            <h2>Education</h2>
+            <p>Education text</p>
+            <h2>Projects</h2>
+            <p>Projects text</p>
+            <h2>Languages</h2>
+            <p>Languages text</p>
             <h2>Goals and aspirations</h2>
             <p>Goals and aspirations text</p>
             <h2>Achievements</h2>
