Add header content to index.html

--- a/index.html
+++ b/index.html
@@ -9,11 +9,23 @@
 
     <body>
         <div class="container">
-            <div class="welcome">
-                <h1>Welcome to my website</h1>
+            <div class="headercontainer">
+                <div class="name">
+                    <p>Lavan Bahirathan</p>
+                </div>
+
+                <div class="headerother">
+                    <p>About me</p>
+                    <p>Education</p>
+                    <p>Projects</p>
+                    <p>Languages</p>
+                    <p>Goals</p>
+                    <p>Achievements</p>
+                    <p>Contact</p>
+                </div>
             </div>
-            <div class="name">
-                <p>Lavan Bahirathan</p>
+            <div class="welcome">
+                <p>Welcome to my website</p>
             </div>
             <h2>About me</h2>
             <p>About me text</p>
@@ -21,7 +33,7 @@
             <p>Education text</p>
             <h2>Projects</h2>
             <p>Projects text</p>
-            <h2>Languages</h2>
+            <h2>Programming languages</h2>
             <p>Languages text</p>
             <h2>Goals and aspirations</h2>
             <p>Goals and aspirations text</p>
