--- a/index.html
+++ b/index.html
@@ -8,43 +8,47 @@
     </head>
 
     <body>
-        <div class="container">
+        <div class="header">
             <div class="headercontainer">
                 <div class="name">
                     <p>Lavan Bahirathan</p>
                 </div>
 
-                <div class="headerother">
-                    <p>About me</p>
-                    <p>Education</p>
-                    <p>Projects</p>
-                    <p>Languages</p>
-                    <p>Goals</p>
-                    <p>Achievements</p>
-                    <p>Contact</p>
-                </div>
+                <ul class="other">
+                    <li><a href=#>About me</a></li>
+                    <li><a href=#>Education</a></li>
+                    <li><a href=#>Projects</a></li>
+                    <li><a href=#>Languages</a></li>
+                    <li><a href=#>Goals</a></li>
+                    <li><a href=#>Achievements</a></li>
+                    <li><a href=#>Contact</a></li>    
+                </ul>
             </div>
-            <div class="welcome">
-                <p>Welcome to my website</p>
-            </div>
-            <h2>About me</h2>
-            <p>About me text</p>
-            <h2>Education</h2>
-            <p>Education text</p>
-            <h2>Projects</h2>
-            <p>Projects text</p>
-            <h2>Programming languages</h2>
-            <p>Languages text</p>
-            <h2>Goals and aspirations</h2>
-            <p>Goals and aspirations text</p>
-            <h2>Achievements</h2>
-            <ul>
-                <li>Achievement 1</li>
-                <li>Achievement 2</li>
-                <li>Achievement 3</li>
-            </ul>
-            <h2>Contact information</h2>
-            <p>Contact information text</p>
+        </div>
+        <div class="welcome">
+            <p>Welcome to my website</p>
+        </div>
+        <h2>About me</h2>
+        <p>About me text</p>
+        <h2>Education</h2>
+        <p>Education text</p>
+        <h2>Projects</h2>
+        <p>Projects text</p>
+        <h2>Programming languages</h2>
+        <p>Languages text</p>
+        <h2>Goals and aspirations</h2>
+        <p>Goals and aspirations text</p>
+        <h2>Achievements</h2>
+        <ul>
+            <li>Achievement 1</li>
+            <li>Achievement 2</li>
+            <li>Achievement 3</li>
+        </ul>
+        <h2>Contact information</h2>
+        <p>Contact information text</p>
+
+        <div class="footer">
+
         </div>
     </body>
 </html>
