--- a/index.html
+++ b/index.html
@@ -15,40 +15,41 @@
                 </div>
 
                 <ul class="other">
-                    <li><a href=#>About me</a></li>
-                    <li><a href=#>Education</a></li>
-                    <li><a href=#>Projects</a></li>
-                    <li><a href=#>Languages</a></li>
-                    <li><a href=#>Goals</a></li>
-                    <li><a href=#>Achievements</a></li>
-                    <li><a href=#>Contact</a></li>    
+                    <li><a href=#about>About me</a></li>
+                    <li><a href=#education>Education</a></li>
+                    <li><a href=#projects>Projects</a></li>
+                    <li><a href=#programming>Languages</a></li>
+                    <li><a href=#goals>Goals</a></li>
+                    <!--<li><a href=#achievements>Achievements</a></li>-->
+                    <li><a href=#contact>Contact</a></li>    
                 </ul>
             </div>
         </div>
-        <div class="welcome">
-            <p>Welcome to my website</p>
-        </div>
-        <h2>About me</h2>
-        <p>About me text</p>
-        <h2>Education</h2>
-        <p>Education text</p>
-        <h2>Projects</h2>
-        <p>Projects text</p>
-        <h2>Programming languages</h2>
-        <p>Languages text</p>
-        <h2>Goals and aspirations</h2>
-        <p>Goals and aspirations text</p>
-        <h2>Achievements</h2>
-        <ul>
-            <li>Achievement 1</li>
-            <li>Achievement 2</li>
-            <li>Achievement 3</li>
-        </ul>
-        <h2>Contact information</h2>
-        <p>Contact information text</p>
 
-        <div class="footer">
-
+        <div class="maincontainer">
+            <div class="welcome">
+                <p>Welcome to my website</p>
+            </div>
+            <h2 id="about">About me</h2>
+            <p>About me text</p>
+            <h2 id="education">Education</h2>
+            <p>Education text</p>
+            <h2 id="projects">Projects</h2>
+            <p>Projects text</p>
+            <h2 id="programming">Programming languages</h2>
+            <p>Languages text</p>
+            <h2 id="goals">Goals and aspirations</h2>
+            <p>Goals and aspirations text</p>
+            <!--<h2 id="achievements">Achievements</h2>
+            <ul>
+                <li>Achievement 1</li>
+                <li>Achievement 2</li>
+                <li>Achievement 3</li>
+            </ul>-->
+            <h2 id="contact">Contact information</h2>
+            <p>Contact information text</p>
         </div>
+
+        <div class="footer"></div>
     </body>
 </html>
