--- a/index.html
+++ b/index.html
@@ -29,27 +29,39 @@
             </div>
     
             <div class="maincontainer">
-                <div class="welcome">
+                <div class="welcomeContainer">
                     <p class="welcomeText">Welcome to my website</p>
                 </div>
-                <h2 id="about">About me</h2>
-                <p>About me text</p>
-                <h2 id="education">Education</h2>
-                <p>Education text</p>
-                <h2 id="projects">Projects</h2>
-                <p>Projects text</p>
-                <h2 id="programming">Programming languages</h2>
-                <p>Languages text</p>
-                <h2 id="goals">Goals and aspirations</h2>
-                <p>Goals and aspirations text</p>
+                <div class="aboutContainer">
+                    <h2 id="about">About me</h2>
+                    <p>About me text</p>
+                </div>
+                <div class="educationContainer">
+                    <h2 id="education">Education</h2>
+                    <p>Education text</p>
+                </div>
+                <div class="projectsContainer">
+                    <h2 id="projects">Projects</h2>
+                    <p>Projects text</p>
+                </div>
+                <div class="programmingContainer">
+                    <h2 id="programming">Programming languages</h2>
+                    <p>Languages text</p>
+                </div>
+                <div class="goalsContainer">
+                    <h2 id="goals">Goals and aspirations</h2>
+                    <p>Goals and aspirations text</p>
+                </div>
                 <!--<h2 id="achievements">Achievements</h2>
                 <ul>
                     <li>Achievement 1</li>
                     <li>Achievement 2</li>
                     <li>Achievement 3</li>
                 </ul>-->
-                <h2 id="contact">Contact information</h2>
-                <p>Contact information text</p>
+                <div class="contactContainer">
+                    <h2 id="contact">Contact information</h2>
+                    <p>Contact information text</p>
+                </div>
             </div>
     
             <div class="footer"></div>
