Change color of links

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
                     </div>
     
                     <ul class="other">
-                        <li><a href=#about>About me</a></li>
-                        <li><a href=#education>Education</a></li>
-                        <li><a href=#projects>Projects</a></li>
-                        <li><a href=#programming>Languages</a></li>
-                        <li><a href=#goals>Goals</a></li>
+                        <li class="am"><a href=#about>About me</a></li>
+                        <li class="ed"><a href=#education>Education</a></li>
+                        <li class="proj"><a href=#projects>Projects</a></li>
+                        <li class="prog"><a href=#programming>Languages</a></li>
+                        <li class="goals"><a href=#goals>Goals</a></li>
                         <!--<li><a href=#achievements>Achievements</a></li>-->
-                        <li><a href=#contact>Contact</a></li>    
+                        <li class="cont"><a href=#contact>Contact</a></li>    
                     </ul>
                 </div>
             </div>
