Uncenter text in each section

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         
         <div class="container">
             <div class="header">
-                <div class="headercontainer">
+                <div class="headerContainer">
                     <div class="name">
                         <p>Lavan Bahirathan</p>
                     </div>
@@ -28,13 +28,18 @@
                 </div>
             </div>
     
-            <div class="maincontainer">
+            <div class="mainContainer">
                 <div class="welcomeContainer">
                     <p class="welcomeText">Welcome to my website</p>
                 </div>
                 <div class="aboutContainer">
                     <h2 id="about">About me</h2>
-                    <p>About me text</p>
+                    <div class="aboutBody">
+                        <p>About me text</p>
+                        <div class="myImgDiv">
+                            <img>
+                        </div>
+                    </div>
                 </div>
                 <div class="educationContainer">
                     <h2 id="education">Education</h2>
