Make boxes for projects

--- a/index.html
+++ b/index.html
@@ -47,7 +47,21 @@
                 </div>
                 <div class="projectsContainer">
                     <h2 id="projects">Projects</h2>
-                    <p>Projects text</p>
+                    <div class="innerProjectsContainer">
+                        <div class="project1Container">
+                            <div class="project1">
+                                Picture1
+                            </div>
+                            <p class="project1Subtext">Text1</p>
+                        </div>
+
+                        <div class="project2Container">
+                            <div class="project2">
+                                Picture2
+                            </div>
+                            <p class="project2Subtext">Text2</p>
+                        </div>
+                    </div>
                 </div>
                 <div class="programmingContainer">
                     <h2 id="programming">Programming languages</h2>
