Change project boxes from div to anchor and give links classes

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
                     </div>
     
                     <ul class="other">
-                        <li class="am"><a href=#about>About me</a></li>
-                        <li class="ed"><a href=#education>Education</a></li>
-                        <li class="proj"><a href=#projects>Projects</a></li>
-                        <li class="prog"><a href=#programming>Languages</a></li>
-                        <li class="goals"><a href=#goals>Goals</a></li>
+                        <li><a href=#about class="am">About me</a></li>
+                        <li><a href=#education class="ed">Education</a></li>
+                        <li><a href=#projects class="proj">Projects</a></li>
+                        <li><a href=#programming class="prog">Languages</a></li>
+                        <li><a href=#goals class="goals">Goals</a></li>
                         <!--<li><a href=#achievements>Achievements</a></li>-->
-                        <li class="cont"><a href=#contact>Contact</a></li>    
+                        <li><a href=#contact class="cont">Contact</a></li>    
                     </ul>
                 </div>
             </div>
@@ -49,16 +49,16 @@
                     <h2 id="projects">Projects</h2>
                     <div class="innerProjectsContainer">
                         <div class="project1Container">
-                            <div class="project1">
+                            <a class="project1">
                                 Picture1
-                            </div>
+                            </a>
                             <p class="project1Subtext">Text1</p>
                         </div>
 
                         <div class="project2Container">
-                            <div class="project2">
+                            <a class="project2">
                                 Picture2
-                            </div>
+                            </a>
                             <p class="project2Subtext">Text2</p>
                         </div>
                     </div>
