Add picture of basic calculator project to one of the boxes in projects section

--- a/index.html
+++ b/index.html
@@ -53,14 +53,14 @@
                     <div class="innerProjectsContainer">
                         <div class="project1Container">
                             <a class="project1">
-                                Picture1
+                                
                             </a>
-                            <p class="project1Subtext">Text1</p>
+                            <p class="project1Subtext">Basic Calculator</p>
                         </div>
 
                         <div class="project2Container">
                             <a class="project2">
-                                Picture2
+                                
                             </a>
                             <p class="project2Subtext">Text2</p>
                         </div>
