Modify text in sections and remove goals section

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                         <li><a href=#education class="edLink">Education</a></li>
                         <li><a href=#projects class="projLink">Projects</a></li>
                         <li><a href=#programming class="progLink">Languages</a></li>
-                        <li><a href=#goals class="goalsLink">Goals</a></li>
+                        <!--<li><a href=#goals class="goalsLink">Goals</a></li>-->
                         <!--<li><a href=#achievements>Achievements</a></li>-->
                         <li><a href=#contact class="contLink">Contact</a></li>    
                     </ul>
@@ -36,7 +36,11 @@
                 <div class="aboutContainer">
                     <h2 id="about">About me</h2>
                     <div class="aboutBody">
-                        <p>About me text</p>
+                        <div class="aboutTextContainer">
+                            <p>My name is Lavan Bahirathan.</p> 
+                            <p>I am a Computer Science graduate</p>
+                            <p>from the University of Windsor.</p>
+                        </div>
                         <div class="myImgDiv">
                             <img>
                         </div>
@@ -45,7 +49,7 @@
 
                 <div class="educationContainer">
                     <h2 id="education">Education</h2>
-                    <p>Education text</p>
+                    <p>I studied Computer Science at the University of Windsor</p>
                 </div>
 
                 <div class="projectsContainer">
@@ -68,13 +72,14 @@
                 </div>
 
                 <div class="programmingContainer">
-                    <h2 id="programming">Programming languages</h2>
-                    <p>Languages text</p>
+                    <h2 id="programming">Programming/markup languages</h2>
+                    <p>I am familiar with HTML, CSS, and JavaScript</p>
                 </div>
-                <div class="goalsContainer">
+                
+                <!--<div class="goalsContainer">
                     <h2 id="goals">Goals and aspirations</h2>
                     <p>Goals and aspirations text</p>
-                </div>
+                </div>-->
 
                 <!--<h2 id="achievements">Achievements</h2>
                 <ul>
