Change project section to white background with black text and black border when hovered over

--- a/index.html
+++ b/index.html
@@ -95,7 +95,9 @@
 
                 <div class="contactContainer">
                     <h2 id="contact">Contact information</h2>
-                    <p>Contact information text</p>
+                    <p>Email:</p>
+                    <p>GitHub:</p>
+                    <p>LinkedIn:</p>
                 </div>
 
                 <div class="backToTopContainer">
