Change project 2 description

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                             </a>
                             <p class="project2Subtext">Board Game</p>
 
-                            <p class="project2Desc">This project is a generic board game. It was created using HTML, CSS, and JavaScript</p>
+                            <p class="project2Desc">This project is a board game. It was created using HTML, CSS, and JavaScript</p>
                         </div>
                     </div>
                 </div>
@@ -96,7 +96,7 @@
                 <div class="contactContainer">
                     <h2 id="contact">Contact information</h2>
                     <p>Email:</p>
-                    <p>GitHub:</p>
+                    <!--<p>GitHub:</p>-->
                     <p>LinkedIn:</p>
                 </div>
 
