Add Other skills section

--- a/index.html
+++ b/index.html
@@ -21,9 +21,10 @@
                         <li><a href=#about class="edLink">Education</a></li>
                         <li><a href=#education class="projLink">Projects</a></li>
                         <li><a href=#projects class="progLink">Languages</a></li>
+                        <li><a href=#programming class="skillsLink">Skills</a></li>
                         <!--<li><a href=#goals class="goalsLink">Goals</a></li>-->
                         <!--<li><a href=#achievements>Achievements</a></li>-->
-                        <li><a href=#programming class="contLink">Contact</a></li>    
+                        <li><a href=#otherSkills class="contLink">Contact</a></li>    
                     </ul>
                 </div>
             </div>
@@ -42,7 +43,7 @@
                             <p>from the University of Windsor.</p>
                         </div>
                         <div class="myImgDiv">
-                            <img>
+                            <img src="photo.jpg" alt="Me" width="250" height="300"> 
                         </div>
                     </div>
                 </div>
@@ -79,6 +80,11 @@
                 <div class="programmingContainer">
                     <h2 id="programming">Programming/markup languages</h2>
                     <p>I am familiar with HTML, CSS, and JavaScript.</p>
+                </div>
+
+                <div class="otherSkillsContainer">
+                    <h2 id="otherSkills">Other skills</h2>
+                    <p>Tools and platforms: Windows, Ubuntu, WSL2</p>
                 </div>
                 
                 <!--<div class="goalsContainer">
