Change background, add picture, and add more skills

--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
                     </div>
     
                     <ul class="other">
-                        <li><a href=#welcomeText class="amLink">About me</a></li>
+                        <li><a href=#welcomeText class="amLink">About Me</a></li>
                         <li><a href=#about class="edLink">Education</a></li>
                         <li><a href=#education class="projLink">Projects</a></li>
                         <li><a href=#projects class="progLink">Languages</a></li>
                         <li><a href=#programming class="skillsLink">Skills</a></li>
                         <!--<li><a href=#goals class="goalsLink">Goals</a></li>-->
                         <!--<li><a href=#achievements>Achievements</a></li>-->
-                        <li><a href=#otherSkills class="contLink">Contact</a></li>    
+                        <!--<li><a href=#otherSkills class="contLink">Contact</a></li>-->
                     </ul>
                 </div>
             </div>
@@ -50,8 +50,8 @@
 
                 <div class="educationContainer">
                     <h2 id="education">Education</h2>
-                    <p>I studied computer science at the University of Windsor. I graduated university in October 2024.</p>
-                    <p>I went to Vincent Massey Secondary School for high school. I graduated high school in June 2018.</p>
+                    <p>I studied computer science at the University of Windsor. I graduated from university in October 2024.</p>
+                    <p>I went to Vincent Massey Secondary School for high school. I graduated from high school in June 2018.</p>
                 </div>
 
                 <div class="projectsContainer">
@@ -78,13 +78,13 @@
                 </div>
 
                 <div class="programmingContainer">
-                    <h2 id="programming">Programming/markup languages</h2>
-                    <p>I am familiar with HTML, CSS, and JavaScript.</p>
+                    <h2 id="programming">Programming and markup languages</h2>
+                    <p>I am familiar with HTML, CSS, JavaScript, Python, and C# (Unity).</p>
                 </div>
 
                 <div class="otherSkillsContainer">
                     <h2 id="otherSkills">Other skills</h2>
-                    <p>Tools and platforms: Windows, Ubuntu, WSL2</p>
+                    <p>Tools and platforms: Windows, Ubuntu, Git, GitHub, GitHub Desktop, Visual Studio Code, WSL2, webpack, Microsoft 365 (Word, PowerPoint, Teams), Google Docs, Unity, pytest, Jest</p>
                 </div>
                 
                 <!--<div class="goalsContainer">
