Change projects and add GitHub links in projects section

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         <div class="aboutTextContainer">
                             <p>My name is Lavan Bahirathan.</p> 
                             <p>I am a Computer Science graduate</p>
-                            <p>from the University of Windsor.</p>
+                            <p>from the University of Windsor</p>
                         </div>
                         <div class="myImgDiv">
                             <img src="photo.jpg" alt="Me" width="250" height="300"> 
@@ -50,29 +50,44 @@
 
                 <div class="educationContainer">
                     <h2 id="education">Education</h2>
-                    <p>I studied computer science at the University of Windsor. I graduated from university in October 2024.</p>
-                    <p>I went to Vincent Massey Secondary School for high school. I graduated from high school in June 2018.</p>
+                    <p>I studied computer science at the University of Windsor. I graduated from university in October 2024</p>
+                    <p>I went to Vincent Massey Secondary School for high school. I graduated from high school in June 2018</p>
                 </div>
 
                 <div class="projectsContainer">
                     <h2 id="projects">Projects</h2>
                     <div class="innerProjectsContainer">
                         <div class="project1Container">
-                            <a class="project1">
-                                
-                            </a>
-                            <p class="project1Subtext">Basic Calculator</p>
+                            <a class="project1" href="https://github.com/lavanbahi1/chess"></a>
+                            <p class="project1Subtext"><b>Chess Web Application</b></p>
 
-                            <p class="project1Desc">This project is a basic calculator. It was created using HTML, CSS, and JavaScript</p>
+                            <p class="project1Desc">This project is a version of chess. It was created using HTML, CSS, and JavaScript. Development is ongoing</p>
+
+                            <div class="project1GitHubLinkContainer">
+                                <a class="project1GitHubLink" href="https://github.com/lavanbahi1/chess"></a>
+                            </div>
                         </div>
 
                         <div class="project2Container">
-                            <a class="project2">
-                                
-                            </a>
-                            <p class="project2Subtext">Board Game</p>
+                            <a class="project2" href="https://github.com/lavanbahi1/weather-app"></a>
+                            <p class="project2Subtext"><b>Weather Web Application</b></p>
 
-                            <p class="project2Desc">This project is a board game. It was created using HTML, CSS, and JavaScript</p>
+                            <p class="project2Desc">This project is a weather app. It was created using HTML, CSS, and JavaScript</p>
+
+                            <div class="project2GitHubLinkContainer">
+                                <a class="project2GitHubLink" href="https://github.com/lavanbahi1/weather-app"></a>
+                            </div>
+                        </div>
+
+                        <div class="project3Container">
+                            <a class="project3" href="https://github.com/lavanbahi1/COMP-3770-Final"></a>
+                            <p class="project3Subtext"><b>3D Unity Game</b></p>
+
+                            <p class="project3Desc">This project is a game made in Unity. It was created using C# with a team of four other people</p>
+
+                            <div class="project3GitHubLinkContainer">
+                                <a class="project3GitHubLink" href="https://github.com/lavanbahi1/COMP-3770-Final"></a>
+                            </div>
                         </div>
                     </div>
                 </div>
