--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <div class="educationContainer">
                     <h2 id="education">Education</h2>
                     <p>I studied computer science at the University of Windsor. I graduated from university in October 2024</p>
-                    <p>I went to Vincent Massey Secondary School for high school. I graduated from high school in June 2018</p>
+                    <p>I went to Vincent Massey Secondary School for high school</p>
                 </div>
 
                 <div class="projectsContainer">
