Try to fix layouts

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="container">
             <div class="header">
                 <div class="headerContainer">
-                    <div id="name">
+                    <div class="name">
                         <p>Lavan Bahirathan</p>
                     </div>
     
@@ -37,13 +37,9 @@
                 <div class="aboutContainer">
                     <h2 id="about">About me</h2>
                     <div class="aboutBody">
-                        <div class="aboutTextContainer">
-                            <p>My name is Lavan Bahirathan.</p> 
-                            <p>I am a Computer Science graduate</p>
-                            <p>from the University of Windsor</p>
-                        </div>
+                        <div class="aboutTextContainer">My name is Lavan Bahirathan. I am a Computer Science graduate from the University of Windsor</div>
                         <div class="myImgDiv">
-                            <img src="photo.jpg" alt="Me" width="250" height="300"> 
+                            <img src="photo.jpg" class="photo" alt="Me" width="250" height="300"> 
                         </div>
                     </div>
                 </div>
